# IMOBIA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/raw/: imoveis.csv
docs/: fase-01-problema.md
notebooks/: 01_eda_inicial.ipynb
scripts/: run_pipeline.py  sanity_check.py
src/imobia/: config.py  logger.py  paths.py
src/imobia/clean/: imoveis.py
src/imobia/collect/: dataset.py  enrich.py
src/imobia/features/: builder.py
src/imobia/models/: advanced.py  baseline.py  clustering.py  persistence.py  tuning.py
src/imobia/viz/: dashboard.py  plots.py
tests/: test_clean.py
