[project]
name = "imobia"
version = "0.1.0"
description = "Análise e previsão de preços do mercado imobiliário brasileiro com IA"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Natalia Barros", email = "seu@email.com" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
    "folium>=0.17",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.10",
    "python-dotenv>=1.0",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "streamlit>=1.40",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
